--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ dependencies = [
     "pydantic>=2.0",
     "pyyaml>=6.0",
     "pyarrow>=14.0",
+    "pandas>=2.0",
     "matplotlib>=3.8",
 ]
 
 [project.optional-dependencies]
 gpu = [
-    "jax[cuda12]>=0.4.30",
+    "jax[cuda13]>=0.4.30",
     "equinox>=0.11",
     "optax>=0.2",
     "diffrax>=0.6",
