Add paper draft and pipeline figure generation
- paper/main.tex: Full workshop paper structure (Abstract, Intro, Related
  Work, Architecture, Experiments with all 14 domains, Cross-Domain
  Analysis, Discussion, Conclusion, 9 references)
- paper/results_table.tex: LaTeX table with 14-domain R2 results
- scripts/generate_pipeline_figure.py: 7-stage pipeline architecture diagram
- .gitignore: exclude output/ and paper/figures/ (generated from scripts)

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ mlruns/
 # JAX/CUDA cache
 __jaxcache__/
 .cuda_cache/
+
+# Generated outputs (reproducible from scripts)
+output/
+outputs/
+paper/figures/
